# gmoo-wrapper-python

./: .coveragerc  .env.example  .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_full.txt  setup.py
examples/: README.md  __init__.py  example_suite.py  example_suite_stateful.py  example_suite_stateless.py  minimal_example.py  multi_pipe_example.py  simple_example.py  simple_stateful_example.py  test_utilities.py
examples/configs/: __init__.py  test_configs.py
examples/functions/: __init__.py  example_functions.py
gmoo_sdk/: __init__.py  application.py  compatibility.py  development.py  dll_interface.py  gmoo_encapsulation.py  helpers.py  visualization.py  workflows.py
requirements/: base.txt  dev.txt  examples.txt
src/gmoo_sdk/: __init__.py  application.py  compatibility.py  development.py  dll_interface.py  helpers.py  load_dll.py  satisfaction.py  stateless_wrapper.py  workflows.py
tests/: README.md  SKIPPED_TESTS_DOCUMENTATION.md  conftest.py  test_application.py  test_application_errors.py  test_application_pipes.py  test_application_robustness.py  test_backup_diagnosis.py  test_basic_functionality.py  test_case_results_import.py  test_compatibility_mode.py  test_comprehensive_workflow.py  test_config.py  test_design_agents_cases.py  test_development.py  test_development_extended.py  test_development_poke_vsme.py  test_development_user_cases.py  test_dll_loading.py  test_dll_loading_extended.py  test_end_to_end_workflow.py  test_environment_setup.md  test_final.py  test_helpers_extended.py  test_helpers_normalize_path.py  test_integrated.py  test_inverse_optimization.py  test_memory_safe.py  test_multi_pipe_investigation.py  test_objective_types_extended.py  test_stateless_wrapper.py  test_stateless_wrapper_extended.py  test_workflows.py
